<?xml version="1.0"?>
<package format="2">
  <name>ros_protocol_buffer_tutorial</name>
  <version>0.0.0</version>
  <description>The ros_protocol_buffer_tutorial package</description>
  <maintainer email="ravi@todo.todo">ravi</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
